# strix

./: .gitignore  .hv.txt  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  ROOST.md  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs.yml  release.yml  sanity-check-app.yml
docs/: index.md  spec.md
docs/development/: setup.md
docs/getting-started/: installation.md  keybindings.md  usage.md
docs/guides/: configuration.md  review-loop.md  theming.md
docs/reference/: architecture.md  cli.md
scripts/release/: strix.rb.tmpl  update-version.sh
skills/strix-review/: SKILL.md
src/: app.rs  cli.rs  comments.rs  comments_cli.rs  config.rs  graph.rs  keys.rs  lib.rs  logging.rs  main.rs  skill.rs  terminal.rs  util.rs  watch.rs
src/git/: diff.rs  history.rs  mod.rs  ops.rs  review.rs  status.rs
src/ui/: diff_view.rs  history.rs  menu.rs  mod.rs  modal.rs  review.rs  staging.rs  syntax.rs  theme.rs
tests/: cli_test.rs  comment_box_test.rs  comment_cli_test.rs  comment_input_test.rs  comment_nav_test.rs  comment_view_test.rs  comments_test.rs  config_test.rs  cross_file_scroll_test.rs  diff_test.rs  graph_test.rs  help_test.rs  history_test.rs  history_view_test.rs  hscroll_test.rs  keys_test.rs  line_numbers_test.rs  menu_test.rs  mouse_test.rs  ops_test.rs  perf_smoke_test.rs  persist_test.rs  refresh_test.rs  review_test.rs  review_view_test.rs  row_model_test.rs  sbs_wrap_test.rs  skill_cli_test.rs  smoke_test.rs  split_view_emph_test.rs  status_test.rs  syntax_test.rs  theme_test.rs  watch_test.rs  worktree_comment_test.rs  worktree_diff_test.rs  wrap_test.rs
tests/common/: mod.rs
