[package]
name = "strix"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "A focused, polished TUI for staging changes and viewing diffs"
license = "MIT"
repository = "https://github.com/charliek/strix"
authors = ["Charlie Knudsen"]
default-run = "strix"

[dependencies]
# TUI
ratatui = "0.29.0"
unicode-width = "0.2"

# Git (pure-Rust reads; mutations shell out to `git`, see src/git/ops.rs)
gix = { version = "0.84.0", default-features = false, features = [
    "sha1",
    "max-performance-safe",
    "status",
    "revision",
] }

# Diff + syntax highlighting
similar = "3.1.1"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

# Config / theming
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
directories = "6.0"

# CLI / errors / logging
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
debug = "limited"
