[package]
name = "strix"
# 0.0.0 is a pre-release sentinel: strix has never published a release, and the
# release-workflows flow needs the version-bump commit to be a real change. The
# first `/release-workflows:release v0.0.1` moves this to 0.0.1.
version = "0.0.6"
edition = "2021"
rust-version = "1.96"
description = "A focused, polished TUI for staging changes and viewing diffs"
license = "MIT"
repository = "https://github.com/charliek/strix"
authors = ["Charlie Knudsen"]
default-run = "strix"

# Debian packaging (cargo-deb). strix shells out to `git` at runtime (status +
# stage/unstage/reset, see src/git/ops.rs), so the package declares a hard
# dependency on it. `revision = ""` drops the default `-1` so the artifact is
# `strix_<version>_<arch>.deb`, matching the apt-charliek glob and README snippet.
[package.metadata.deb]
maintainer = "Charlie Knudsen <charlie.knudsen@gmail.com>"
depends = "$auto, git"
section = "utils"
priority = "optional"
revision = ""

[dependencies]
# TUI
ratatui = "0.29.0"
unicode-width = "0.2"

# Git (pure-Rust reads; mutations shell out to `git`, see src/git/ops.rs)
gix = { version = "0.84.0", default-features = false, features = [
    "sha1",
    "max-performance-safe",
    "status",
    "revision",
] }

# Diff + syntax highlighting
similar = "3.1.1"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
# Extended syntax set (two-face republishes more Sublime syntaxes than syntect's
# bundled defaults); syntect-fancy pairs it with strix's existing fancy regex
# engine choice above instead of pulling in onig too.
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }

# Filesystem watching (auto-refresh); debouncer coalesces event bursts
notify = "8.2"
notify-debouncer-mini = "0.7"

# Config / theming. toml_edit is used only by the config write-back path
# (src/config.rs `persist`) — it preserves comments/unknown keys/formatting on
# rewrite, which `toml` (read-only here) cannot do.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
toml_edit = "0.25"
directories = "6.0"

# CLI / errors / logging
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
toml = "1.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
debug = "limited"
